feat: add build-and-push-api job to CircleCI configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,57 @@ jobs:
           name: "Say hello"
           command: "echo Hello, World!"
 
+  build-and-push-api:
+    docker:
+      - image: cimg/base:stable
+    environment:
+      IMAGE_NAME: thcerutti/sample-k8s-app-api
+      DOCKER_BUILDKIT: 1
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 24.0.7
+      - run:
+          name: Docker version
+          command: docker version
+      - run:
+          name: Login Docker Hub
+          command: |
+            [ -n "$DOCKERHUB_USERNAME" ] || { echo "DOCKERHUB_USERNAME ausente"; exit 1; }
+            [ -n "$DOCKERHUB_TOKEN" ] || { echo "DOCKERHUB_TOKEN ausente"; exit 1; }
+            echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+      - run:
+          name: Calcular tags
+          command: |
+            GIT_SHA=$(git rev-parse --short HEAD)
+            echo "export GIT_SHA=$GIT_SHA" >> $BASH_ENV
+            echo "Tags: $IMAGE_NAME:latest e $IMAGE_NAME:$GIT_SHA"
+      - run:
+          name: Build imagem API
+          command: |
+            docker build -t $IMAGE_NAME:latest -t $IMAGE_NAME:${GIT_SHA} ./api
+      - run:
+          name: Push imagens
+          command: |
+            docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:${GIT_SHA}
+      - run:
+          name: Sumário
+          command: |
+            echo "Pushed $IMAGE_NAME:latest"
+            echo "Pushed $IMAGE_NAME:${GIT_SHA}"
+
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/guides/orchestrate/workflows/ & https://circleci.com/docs/reference/configuration-reference/#workflows
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  build-and-publish:
     jobs:
-      - say-hello
+      - build-and-push-api:
+          filters:
+            branches:
+              only: main
+      - say-hello:
+          filters:
+            branches:
+              only: main
